--- a/app.json
+++ b/app.json
@@ -1,43 +1,3 @@
 {
-  "expo": {
-    "name": "LeviathanPlay",
-    "slug": "LeviathanPlay",
-    "version": "1.0.0",
-    "version_name": "Chimera",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "package": "com.rafawastaken.LeviathanPlay",
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "4fe092e5-9efd-4b4e-a05e-dbfc2c1140fa"
-      }
-    },
-    "updates": {
-      "enabled": true,
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/4fe092e5-9efd-4b4e-a05e-dbfc2c1140fa",
-      "channel": "production"
-    },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    }
-  }
+  "expo": {}
 }
